com.top_logic.themes.core/src/main/webapp/style/core.css
/* ... */
.pdlgToolbar {
	display: flex;
	align-self: center;
	cursor: pointer;
}

.pdlgToolbar > span {
	display: flex;
	align-self: center;
	gap: var(--spacing-02);
	margin-right: var(--spacing-02);
}

.pdlgToolbar a {
	color: var(--button-fg, var(--icon-primary));
}

.pdlgToolbar a:hover {
	color: var(--button-fg, var(--icon-primary));
}

.pdlgTitle {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding: 0 3px;
	align-self: center;
}

.menuTitle {
	position: relative;
	display: flex;
	height: var(--POPUP_TITLE_HEIGHT);
	padding-left: 2px;
	background-color: var(--layer-accent);
	color: var(--layer-accent-text);
	--button-fg: var(--layer-accent-icon);
}

.menuTitleContents {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding: 0 3px;
	align-self: center;
}

.cTextPopupEditor {
	margin: 0 var(--spacing-02);
}

.cTextPopupEditor .cTextInput .lFlexible textarea {
	height: 3rem;
	margin-top: var(--spacing-02);
}

.fltGlobalContainer {
	width: 100%;
	height: 100%;
	background: var(--layer);
	overflow: auto;
}

.fltGlobalContainer input,
.fltGlobalContainer .cTextInput input {
	background: var(--background);
}

.fltGlobalContainer .cTextInput input {
	margin-bottom: var(--spacing-03);
}

div.fltHeader {
	margin: 3px;
	font-family: var(--font-family);
	font-weight: bold;
}

.fltSettings {
	position: relative;
	overflow: auto;
	max-width: 100%;
	padding: 0 var(--spacing-03);
}

.fltCommandContent {
	text-align: center;
	box-sizing: border-box;
	padding: var(--spacing-03) var(--spacing-01) var(--spacing-02) var(--spacing-01);
}

.fltMenu {
	position: relative;
	overflow: hidden;
}

.fltSubContent {
	margin: 0px;
	overflow: auto;
	padding-top: var(--spacing-02);
}

hr {
	border-top: 1px solid var(--border-subtle);
	margin: var(--spacing-03) 0;
}

.sidebarFilterContainer .fToggle,
.sidebarFilterContainer .fToggle:focus,
.sidebarFilterContainer .fToggle:hover {
	color: var(--button-fg, var(--icon-primary));
}

.sidebarFilterContainer .fltSubContent {
	margin: 0px;
	overflow: auto;
	padding: var(--spacing-03) var(--spacing-03);
}

.sidebarFilterContainer .fltSubContent.fltMenu {
	margin: 0px;
	overflow: auto;
	padding: 0 var(--spacing-03);
}

.sidebarFilterContainer input,
.sidebarFilterContainer .cTextInput input,
.sidebarFilterContainer .cDateInput input,
.sidebarFilterContainer .cDateInput .lFixedRight,
.sidebarFilterContainer .cTimeInput input,
.sidebarFilterContainer .cTimeInput .lFixedRight,
.sidebarFilterContainer .ddwttDropBtn {
	color: var(--highlight-fg, inherit);
	background: var(--highlight-bg, var(--background));
}

.sidebarFilterContainer .cTextInput input {
	margin-bottom: var(--spacing-03);
}

ul.fltList {
	list-style-type : none;
	margin: 3px;
	padding: 0px;
}

div.fltList {
	position: relative;
	width: 100%;
	overflow: hidden;
}

.fltList > div {
    display: flex;
    flex-direction: row;
    gap: var(--spacing-02);
}

.fltList span {
	margin-left: 0 !important;
}

.fltList div .cLabel {
	padding-left: 0;
}

.fltList .cLabel {
	padding: 0 var(--spacing-02);
}

.filterBox {
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	gap: var(--spacing-01);
	margin: var(--spacing-01) 0;
}

.operatorBox {
	display: inline-flex;
	align-items: center;
	flex-wrap: wrap;
}


.patternBox {
	display: inline-flex;
	align-items: center;
	flex-direction: column;
}

.patternBoxExpanded {
	display: inline-flex;
	align-items: center;
	flex-wrap: wrap;
	gap: var(--spacing-03);
}

.firstPattern, 
.secondPattern, 
.pushDownForeground, 
.pushDownBackground, 
.pullUpForeground, 
.pullUpBackground {
	display: inline-flex;
	align-items: center;
	gap: var(--spacing-01);
}

.pushDownForeground, 
.pushDownBackground, 
.pullUpForeground, 
.pullUpBackground {
	animation-duration: 0.3s;
	animation-direction: reverse;
}

.pushDownForeground {
	animation-name: reversePushDownForeground;
}

.pushDownBackground {
	animation-name: reversePushDownBackground;
}

.pullUpForeground {
	animation-name: reversePullUpForeground;
}

.pullUpBackground {
	animation-name: reversePullUpBackground;
}

@keyframes reversePushDownForeground {
    0%   {z-index: 1;}
    50%  {z-index: 3; transform: scale(1.1)}
    100% {z-index: 1; top: 0; left: 0}
}

@keyframes reversePushDownBackground {
    50%  {transform: scale(0.9)}
    100% {top: 0; left: 0}
}

@keyframes reversePullUpForeground {
    0%   {z-index: 1;}
    50%  {z-index: 3; transform: scale(1.1)}
    100% {z-index: 1; top: 25px; left: 0}
}

@keyframes reversePullUpBackground {
    50%  {transform: scale(0.9)}
    100% {top: 25px; left: 0}
}

.filterGroupTitle {
	margin: 2px 2px 5px;
	font-family: var(--font-family);
	font-weight: bold;
}

.defaultFilterContainer {
	margin-top: var(--spacing-02);
}

.defaultFilterContainer .cPopupSelect,
.defaultFilterContainer .cTextSelect,
.defaultFilterContainer .cExpandableTextInput,
.defaultFilterContainer .cTextInput,
.defaultFilterContainer .cDatetime,
.defaultFilterContainer .cDateInput,
.defaultFilterContainer .cIntegerInput,
.defaultFilterContainer .cTimeInput {
	width: 100%;
	white-space: break-spaces;
	word-wrap: break-word;
	word-break: break-word;
}

.defaultFilterContainer .cDatetime {
	flex-wrap: wrap;
}

.defaultFilterContainer .cDatetime input {
	width: 65px;
}

.defaultFilterContainer .cDateInput input {
	width: 100px;
}

.defaultFilterContainer input,
.defaultFilterContainer .cTextInput input,
.defaultFilterContainer .cDateInput input,
.defaultFilterContainer .cDateInput .lFixedRight,
.defaultFilterContainer .cTimeInput input,
.defaultFilterContainer .cTimeInput .lFixedRight,
.defaultFilterContainer .ddwttDropBtn {
	color: var(--highlight-fg, inherit);
	background: var(--highlight-bg, var(--background));
}

.defaultFilterContainer .lFlexible > input {
	box-sizing: border-box;
}

.defaultFilterContainer span.cError img {
	position: absolute;
	top: 0;
	right: 0;
}

.sidebarFilterContainer .checkboxMultiSelectContainer {
	max-height: none;
}
/* ... */

